--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
+.DS_Store
+.editorconfig
 .git
 .gz
 .hg
+.hg_archival.txt
 .idea
 .project
 .pydevproject
 .travis.yml
 *.pyo
+*.pyc
 *.tar
 *.xcf
 *.zip
