[matrix] update increment-version.yml to only run for matrix branch

--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -2,7 +2,7 @@ name: Increment version of updated languages
 
 on:
   push:
-    branches: [ matrix, nexus ]
+    branches: [ matrix ]
     paths:
       - '**resource.language.**strings.po'
       - '**resource.language.**langinfo.xml'
